2001-03-12  Pavel Roskin  <proski@gnu.org>

	* tests/Makefile.am (XFAIL_TESTS): Remove cond3.test, it passes
	now.

2001-03-12  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_conditions_permutations): Separate the
	conditions.
	* tests/cond3.test: Improve the sed expression.

2001-03-09  Pavel Roskin  <proski@gnu.org>

	* Makefile.am (maintainer-check): Scan all *.am files and tests
	for invocations of `rm' without `-f'.
	* tests/mclean.test: Adjusted to prevent triggering the above
	test.

2001-03-09  Tom Tromey  <tromey@redhat.com>

	* automake.in (scan_one_autoconf_file): Fixed comment to avoid
	maintainer-check failure.

2001-03-09  Akim Demaille  <akim@epita.fr>

	* tests/cond3.test: Strengthen.

2001-03-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&conditional_string): Produce a unique string
	characterizing a condition stack.
	(&conditional_same): Remove, comparing two strings is now enough.
	(&variable_defined): Adjust.
	(&read_am_file): Use conditional_string.

2001-03-08  Akim Demaille  <akim@epita.fr>

	* automake.in: Use -w.
	Normalize all use of `$lang . '-foo'' into `"$lang-foo"'.
	(&parse_arguments): Support --Werror and --Wno-error as a
	temporary hack until --warning/-W is properly implemented.
	(&handle_single_transform_list): Prototype.
	Be sure to define $directory.
	Use `exists' instead of testing the value of a maybe undefined
	hash value.
	(&add_depend2, &handle_configure, &handle_footer, &file_contents)
	(&handle_factored_dependencies): Use defined values.
	(&scan_one_autoconf_file): Save $_.
	* tests/lex2.test, tests/sinclude.test, tests/suffix3.test:
	Run automake with --Wno-error.

2001-03-07  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_all): Use an array instead of a scalar for
	local_headers.
	Get rid of all-redirect: let `all' be that target.

2001-03-07  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets): Ventilate its non `all'
	related content into...
	(&generate_makefile): here.