@@ -3352,15 +3352,16 @@ Automake supports a simple type of conditionals.
 @cvindex AM_CONDITIONAL
 Before using a conditional, you must define it by using
 @code{AM_CONDITIONAL} in the @code{configure.in} file (@pxref{Macros}).
-The @code{AM_CONDITIONAL} macro takes two arguments.
 
-The first argument to @code{AM_CONDITIONAL} is the name of the
-conditional.  This should be a simple string starting with a letter and
-containing only letters, digits, and underscores.
+@defmac AM_CONDITIONAL (@var{conditional}, @var{condition})
+The conditional name, @var{conditional}, should be a simple string
+starting with a letter and containing only letters, digits, and
+underscores.  It must be different from @samp{TRUE} and @samp{FALSE}
+which are reserved by Automake.
 
-The second argument to @code{AM_CONDITIONAL} is a shell condition,
-suitable for use in a shell @code{if} statement.  The condition is
-evaluated when @code{configure} is run.
+The shell @var{condition} (suitable for use in a shell @code{if}
+statement) is evaluated when @code{configure} is run.
+@end defmac
 
 @cindex --enable-debug, example
 @cindex Example conditional --enable-debug
