@@ -7,12 +7,12 @@
 cat > configure.in << 'END'
 AC_INIT(Makefile.am)
 AM_INIT_AUTOMAKE(foo,0.0)
-AM_CONDITIONAL(FALSE, [test x = y])
+AM_CONDITIONAL(WRONG, [test x = y])
 AC_OUTPUT(Makefile)
 END
 
 cat > Makefile.am << 'END'
-if FALSE
+if WRONG
 this=
 else
 this=is_something_interesting
