@@ -1,4 +1,4 @@
-@set UPDATED 26 February 2001
-@set UPDATED-MONTH February 2001
+@set UPDATED 23 March 2001
+@set UPDATED-MONTH March 2001
 @set EDITION 1.4e
 @set VERSION 1.4e
