@@ -1,3 +1,14 @@
+2001-03-23  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (read_am_file): TRUE and FALSE are predefined
+	conditionals.
+	(&by_condition): Adjust.
+	(&conditional_string): Recognize `TRUE' and `FALSE'.
+	(&make_condition): Use it.
+	* m4/cond.m4: Reject TRUE and FALSE as conditionals.
+	* automake.texi (Conditionals): Adjust.
+	* tests/cond9.test: s/FALSE/WRONG/.
+
 2001-03-12  Pavel Roskin  <proski@gnu.org>
 
 	* tests/Makefile.am (XFAIL_TESTS): Remove cond3.test, it passes
